# tg_bot

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  client.cpp
include/: CMakeLists.txt  certif.hpp  coro_future.hpp  head.hpp  json_head.hpp  linkPreviewOptions.hpp  print.hpp  session_interface.hpp  tg_exceptions.hpp  tg_pars.hpp  tg_requestes.hpp
include/LFS/: CMakeLists.txt  LF_FreeList.hpp  LF_HashTable.hpp  LF_List.hpp  LF_allocator.hpp  LF_hazardous.hpp  LF_set.hpp  LF_stack.hpp  share_resource.hpp
include/TestUtils/: thread_handler.hpp
include/decoding/: decoder.hpp
include/entities/: Animation.hpp  Audio.hpp  CMakeLists.txt  Chat.hpp  Document.hpp  File.hpp  LinkPreviewOptions.hpp  Message.hpp  MessageOrigin.hpp  PhotoSize.hpp  SetWebHook.hpp  TelegramEntities.hpp  TelegramResponse.hpp  User.hpp  WebHook.hpp  YandexRoot.hpp  concept_entities.hpp  deleteWebhook.hpp  entities.hpp  forwardMessage.hpp  getUpdates.hpp  linkPreviewOptions.hpp  sendMessage.hpp  sendPhoto.hpp  tg_message.hpp
include/parsing/: html_pars.hpp  lxb_pars.hpp  url_pars.hpp
include/responses/: interface.hpp
include/searcher/: searcher.hpp
res/: file.json
search/: CMakeLists.txt  search.cpp
serv/: CMakeLists.txt  serv.cpp
tests/: CMakeLists.txt  tg_req.cpp
